--- a/Compiler/online/src/Component/Editor.css
+++ b/Compiler/online/src/Component/Editor.css
@@ -1,4 +1,8 @@
+.EditorContainer{
+    position: fixed;
+}
 .EditorInputOutput{
+    margin-top: 3rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -9,11 +13,14 @@
     border: 2px solid black;
     border-radius: 5px;
     font-weight: 300;
+    tab-size: 2rem;
 
 }
 .Navbar{
-    height: 60px;
-    background-color: rgb(113, 229, 95);
+    position: fixed;
+    height: 3rem;
+    width: 100%;
+    background-color: rgb(111, 136, 150);
     border: 2px solid black;
     border-radius: 5px;
     display: flex;
@@ -22,17 +29,18 @@
     align-items: center;
 }
 .Theme{
-    font-size: 20px;
-    font-weight: 700;
-    text-align: center;
-    padding: 5px;
+    font-size: 15px;
+    font-weight:bold;
+    text-align: start;
+    padding: 2px;
     margin: 3px;
     color: black;
-    border: 1px solid black;
-    background-color: bisque;
+    border: none;
+    background-color: white;
+
 }
 .label{
-    font-size: 25px;
+    font-size: 18px;
     margin-left: 5px;
     font-weight: bold;
 }
@@ -46,15 +54,35 @@
     align-items: center;
     flex-direction: row;
 }
-.outputBox{
-    width: 29.5vw;
-    height: calc(100vh - 67.5px);
+/* .outputBox{
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    width: 60%;
+    height: calc(80vh);
 
-}
+} */
+.sliding-div {
+    position: fixed;
+    bottom: -100%;
+    left: 20%;
+    width: 60%;
+    height: calc(80vh);
+    display: flex;
+    background-color: white;
+    border-radius: 1.5rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: bottom 0.5s ease-in-out;
+    z-index: 1;
+  }
+  
+  .sliding-div.visible {
+    bottom: 0;
+  }
+
 .inputArea{
     width: 29vw;
     height: calc(25vh - 34px);
@@ -73,17 +101,32 @@
     margin: 5px;
 }
 .outputEditor{
+    margin: 1.5rem;
+    width: 100%;
+    height: 100%;
     font-size: 20px;
-    color: white;
-    background-color: black;
+    font-weight: bold;
+    color: rgb(10, 7, 7);
+    background-color:white;
+}
+.close{
+    right: 20px;
+    z-index: 1;
+    position: absolute;
+    font-size: 30px;
+    font-weight: bold;
+    color: black;
+    cursor: pointer;
 }
 .run{
     margin: 10px;
-    padding: 5px;
-    font-size: 20px;
-    color: blueviolet;
+    padding-left:.25rem;
+    padding-top: .25rem;
+    font-size: 15px;
+    color: black;
     font-weight: bold;
-    border-radius: 5px;
+    border: none;
+    border-radius: 4px;
 }
 .inputLabel{
     color: white;
