--- a/Compiler/online/src/Component/Editor.css
+++ b/Compiler/online/src/Component/Editor.css
@@ -36,8 +36,13 @@
     margin: 3px;
     color: black;
     border: none;
+    outline: none;
     background-color: white;
 
+}
+.Theme:focus{
+    border: none;
+    outline: none;
 }
 .label{
     font-size: 18px;
@@ -104,7 +109,7 @@
     margin: 1.5rem;
     width: 100%;
     height: 100%;
-    font-size: 20px;
+    font-size:x-large;
     font-weight: bold;
     color: rgb(10, 7, 7);
     background-color:white;
@@ -113,7 +118,7 @@
     right: 20px;
     z-index: 1;
     position: absolute;
-    font-size: 30px;
+    font-size: 2rem;
     font-weight: bold;
     color: black;
     cursor: pointer;
